{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 37,
  "lineage": "0028deaf-af8d-f8e5-c280-44b169436aee",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/networkInterfaces/vm-apps-nic",
            "internal_domain_name_suffix": "io5emvygjbmuxmq4xvuga2bsah.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/sub-srv-001"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-0D-3A-64-DD-6B",
            "name": "vm-apps-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "rg-tftecsp-0001",
            "virtual_machine_id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Compute/virtualMachines/vm-apps"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub-srv-001",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-001",
            "location": "northeurope",
            "name": "nsg-hub-001",
            "resource_group_name": "rg-tftecsp-0001",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.10.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-RDP-VM-APPs",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-spk-001",
            "location": "westus",
            "name": "nsg-spk-001",
            "resource_group_name": "rg-tftecsp-0001",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/publicIPAddresses/vm-apps-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.169.252.116",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "vm-apps-pip",
            "resource_group_name": "rg-tftecsp-0001",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/publicIPAddresses/bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.178.128.179",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "bastion-pip",
            "resource_group_name": "rg-tftecsp-0001",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureBastionSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.20.0/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tftecsp-0001",
            "virtual_network_name": "vnet-hub-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-aks-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.11.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-aks-001",
            "name": "sub-aks-001",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tftecsp-0001",
            "virtual_network_name": "vnet-spk-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-appgw-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.11.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-appgw-001",
            "name": "sub-appgw-001",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tftecsp-0001",
            "virtual_network_name": "vnet-spk-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-db-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.11.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-db-001",
            "name": "sub-db-001",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tftecsp-0001",
            "virtual_network_name": "vnet-spk-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-srv-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/sub-srv-001",
            "name": "sub-srv-001",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tftecsp-0001",
            "virtual_network_name": "vnet-hub-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-vint-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.11.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-vint-001",
            "name": "sub-vint-001",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tftecsp-0001",
            "virtual_network_name": "vnet-spk-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub-web-001",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.11.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-web-001",
            "name": "sub-web-001",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-tftecsp-0001",
            "virtual_network_name": "vnet-spk-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_hub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/sub-srv-001",
            "network_security_group_id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-001",
            "subnet_id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/sub-srv-001"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg_hub",
            "azurerm_resource_group.rg",
            "azurerm_subnet.sub-srv-001",
            "azurerm_virtual_network.vnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5746be43-4806-4b59-b21e-bd6860703207",
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001",
            "location": "northeurope",
            "name": "vnet-hub-001",
            "resource_group_name": "rg-tftecsp-0001",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/sub-srv-001",
                "name": "sub-srv-001",
                "security_group": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/networkSecurityGroups/nsg-hub-001"
              },
              {
                "address_prefix": "10.10.20.0/26",
                "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.11.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "15346858-5e01-41cd-8a21-cd9c6fba0def",
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001",
            "location": "westus",
            "name": "vnet-spk-001",
            "resource_group_name": "rg-tftecsp-0001",
            "subnet": [
              {
                "address_prefix": "10.11.1.0/24",
                "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-web-001",
                "name": "sub-web-001"
              },
              {
                "address_prefix": "10.11.2.0/24",
                "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-aks-001",
                "name": "sub-aks-001"
              },
              {
                "address_prefix": "10.11.3.0/24",
                "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-appgw-001",
                "name": "sub-appgw-001"
              },
              {
                "address_prefix": "10.11.4.0/24",
                "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-vint-001",
                "name": "sub-vint-001"
              },
              {
                "address_prefix": "10.11.5.0/24",
                "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/subnets/sub-db-001",
                "name": "sub-db-001"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_to_spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/virtualNetworkPeerings/HubToSpoke",
            "name": "HubToSpoke",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001",
            "resource_group_name": "rg-tftecsp-0001",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub",
            "azurerm_virtual_network.vnet_spoke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-spk-001/virtualNetworkPeerings/SpokeToHub",
            "name": "SpokeToHub",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/99433210-484b-482d-af20-1fabe24fc6fc/resourceGroups/rg-tftecsp-0001/providers/Microsoft.Network/virtualNetworks/vnet-hub-001",
            "resource_group_name": "rg-tftecsp-0001",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spk-001"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet_hub",
            "azurerm_virtual_network.vnet_spoke"
          ]
        }
      ]
    }
  ]
}